# rover-soft

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  docker-compose.yml  initialize_can_interface.sh  launch_from_service.sh  move.sh  package-lock.json  package.json  stop_from_service.sh
src/: README.md
src/gaja_software/: CMakeLists.txt  README.md  package.xml
src/gaja_software/arduino/gaja_motor_control/: gaja_motor_control.ino
src/gaja_software/launch/: gaja_driver.launch
src/gaja_software/scripts/: gaja_driver.py
src/gazebo_ros_gps_sensor/: CMakeLists.txt  package.xml
src/gazebo_ros_gps_sensor/include/gazebo_ros_gps_sensor/: gazebo_ros_gps_sensor.h
src/gazebo_ros_gps_sensor/src/: gazebo_ros_gps_sensor.cpp
src/gazebo_worlds/: CMakeLists.txt  README.md  package.xml
src/gazebo_worlds/launch/: gazebo_empty.launch
src/gazebo_worlds/models/: generate_markers.py
src/gazebo_worlds/models/Marker0/: model.config
src/gazebo_worlds/models/Marker1/: Marker1.dae  model.sdf
src/gazebo_worlds/models/Marker10/: Marker10.dae  model.config  model.sdf
src/gazebo_worlds/models/Marker11/: Marker11.dae  model.config  model.sdf
src/gazebo_worlds/models/Marker12/: model.config
src/gazebo_worlds/models/Marker13/: Marker13.dae
src/gazebo_worlds/models/Marker14/: model.config  model.sdf
src/gazebo_worlds/models/Marker15/: Marker15.dae  model.config
src/gazebo_worlds/models/Marker2/: Marker2.dae  model.config
src/gazebo_worlds/worlds/: marsyard.world  marsyard_artags.world
src/manip_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/manip_control/arduino/: gripper_controller.ino
src/manip_control/cfg/: ManipInterface.cfg
src/manip_control/config/: controller.yaml  kinematics.yaml  manip_gazebo_interface.yaml  manip_interface_ros.yaml  manip_roboclaw_interface.yaml  roboclaws.yaml
src/manip_control/docs/: system_diagram.drawio
src/manip_control/launch/: gripper.launch  manip_control.launch  manip_gazebo_interface.launch  manip_interface_ros.launch  manip_roboclaw_interface.launch
src/manip_control/scripts/: InverseKinematics.py  gripper_arduino.py  home.py  ik.py  manip.py  manip_control_old.py  manip_controller.py  manip_interface.py  manip_interface_dummy.py  manip_interface_ros.py  manip_jointstate_aggregator.py  motion_interpolation.py  motion_planning.py  motion_strategies.py  return_to_home.py  ros_interface.py  ros_manip_interface.py  setup.py  sirius_ik.py  test_manip_control.py
src/marker_based_localization/: CMakeLists.txt  README.md  package.xml
src/marker_based_localization/launch/: hybrid_localization.launch
src/marker_description/: CMakeLists.txt  README.md  package.xml
src/marker_description/launch/: marker_gazebo.launch  marker_spawner.launch
src/marker_description/urdf/: marker.urdf.xacro  marker.yaml  marker1.urdf.xacro  marker2.urdf.xacro  marker3.urdf.xacro  marker4.urdf.xacro
src/odrive_driver/: CMakeLists.txt  README.md  odrive_hw_plugin.xml  package.xml
src/odrive_driver/include/: control.h
src/odrive_driver/scripts/: driver.py
src/odrive_driver/src/: control.cpp
src/roboclaw_driver/: CMakeLists.txt  README.md  package.xml  roboclaw_hw_plugin.xml  setup.py
src/roboclaw_driver/include/: control.h
src/roboclaw_driver/scripts/: all.py  driver.py
src/roboclaw_driver/src/: control.cpp
src/sirius_cameras/: CMakeLists.txt  README.md  package.xml
src/sirius_cameras/include/: AlignedMarkerLocalization.hpp  ArtagDetector.hpp  HybridMarkerLocalization.hpp  Marker.hpp  MarkerDetector.hpp  MarkerLocalization.hpp
src/sirius_cameras/launch/: hard_iron_calibration.launch  morb_slam.launch  morb_slam_ros.rviz  oak_d_w.launch  oak_d_w_rect.launch
src/sirius_cameras/src/: ArtagDetector.cpp  marker_localization.cpp  oak_d_w.cpp  oak_d_w_rect.cpp
src/sirius_description/: CMakeLists.txt  README.md  package.xml
src/sirius_description/config/: controllers.yaml  diagnostic_aggregator.yaml  hardware.yaml  hardware.yaml.save  hardware_tmp.yaml  hardware_urc23.yaml  odom_sensor_fusion.yaml  odrive.yaml  odrive_test.yaml  sensor_fusion.yaml
src/sirius_description/launch/: control_system.launch  diagnostics.launch  gnss.launch  manipulator.launch  manipulator_gazebo.launch  manipulator_rviz.launch  markers_erc_2023.launch  oak_d_w.launch  odrive_test.launch  sirius.launch  sirius2.launch  sirius_gazebo.launch  sirius_gazebo_markers_erc_2023.launch  sirius_tmp.launch  vo.launch
src/sirius_description/meshes/: arm1.stl  cyl.stl
src/sirius_description/rviz/: manipulator.rviz  sirius_gazebo.rviz
src/sirius_description/urdf/: gripper.urdf.xacro  manipulator.urdf.xacro  manipulator.yaml  manipulator_inertial.yaml  manipulator_z_chwytakiem.urdf.xacro  materials.urdf.xacro  sirius_2.urdf.xacro  sirius_2.yaml
src/sirius_description/worlds/: marsyard2023.world
src/sirius_gazebo_ros_p3d/: CMakeLists.txt  package.xml
src/sirius_gazebo_ros_p3d/src/: sirius_gazebo_ros_p3d.cpp
src/sirius_localization/: CMakeLists.txt  README.md  package.xml
src/sirius_localization/config/: complementary_filter.yaml  ekf.yaml  gnss.yaml  imu_filter.yaml  map_sensor_fusion.yaml  odom_sensor_fusion.yaml
src/sirius_localization/launch/: complementary_filter.launch  ekf.launch  gnss.launch  localization.launch  madgwick_filter.launch  map_sensor_fusion.launch  odom_sensor_fusion.launch
src/sirius_localization/scripts/: noise_variance_estimator.py  random_traversal.py
src/sirius_modules/: CMakeLists.txt  README.md  package.xml  setup.py
src/sirius_modules/launch/: modules.launch  socketcan_bridge.launch
src/sirius_modules/scripts/: can_utils.py  gripper.py  gripper_serial.py  initialize_can_interface.sh  led_flag.py  power_man.py  science.py  usb_find_port.sh
src/sirius_navigation/: CMakeLists.txt  README.md  package.xml
src/sirius_navigation/config/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
src/sirius_navigation/launch/: nav.launch
src/sirius_navigation/scripts/: move_base_relay.py  simple_goal_relay.py
(+322 files in other folders)
