<?xml version="1.0"?>
<package format="2">
  <name>gazebo_worlds</name>
  <version>0.0.0</version>
  <description>Package containing worlds for gazebo simulations</description>

  <maintainer email="zebromek@gmail.com">zebromek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
