<?xml version="1.0"?>
<package format="2">
  <name>marker_based_localization</name>
  <version>0.1.0</version>
  <description>Nodes for estimating robot pose from detected markers</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ar_track_alvar</depend>
  <depend>camera_info_manager</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>marker_msgs</depend>
</package>
