<?xml version="1.0"?>
<package format="2">
  <name>marker_description</name>
  <version>1.0.0</version>
  <description>Fiducial marker description</description>

  <maintainer email="gabrysbrzezinski@gmail.com">Gabriel Brzeziński</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>    
    <gazebo_ros gazebo_media_path="${prefix}"/>                             
  </export>

</package>
