<?xml version="1.0"?>
<package format="2">
  <name>odrive_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for the Odrive motor controllers</description>

  <maintainer email="todo@todo.com">Mateusz Szymański</maintainer>
  <author>Mateusz Szymański</author>
  <author>Gabriel Brzeziński</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>sirius_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
  <depend>combined_robot_hw</depend>
  <depend>realtime_tools</depend>
  <export>
    <hardware_interface plugin="${prefix}/odrive_hw_plugin.xml"/>
  </export>
</package>
