<?xml version="1.0"?>
<package format="2">
  <name>roboclaw_driver</name>
  <version>0.2.0</version>
  <description>ROS driver for the Roboclaw motor controllers</description>

  <maintainer email="gabrysbrzezinski@gmail.com">Gabriel Brzeziński</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>sirius_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
  <depend>combined_robot_hw</depend>
  <depend>realtime_tools</depend>
  <export>
    <hardware_interface plugin="${prefix}/roboclaw_hw_plugin.xml"/>
  </export>
</package>
