<?xml version="1.0"?>
<package format="2">
  <name>sirius_cameras</name>
  <version>0.1.0</version>
  <description>Sirius camera nodes, configs and launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ar_track_alvar</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <exec_depend>depthai-ros</exec_depend>
  <exec_depend>robot_calibration</exec_depend>
  

</package>
