<?xml version="1.0"?>
<package format="2">
  <name>sirius_gazebo_ros_p3d</name>
  <version>0.2.0</version>
  <description>Modified 3D position interface for ground truth</description>
  <maintainer email="gabriel@gabrielb.com">Gabriel Brzeziński</maintainer>
  <license>BSD, Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
