<?xml version="1.0"?>
<package format="2">
  <name>sirius_localization</name>
  <version>0.1.0</version>
  <description>Sirius localization configs and launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>ublox</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

</package>
