<?xml version="1.0"?>
<package format="2">
  <name>sirius_modules</name>
  <version>0.1.0</version>
  <description>Software for modules of Sirius 2 rover</description>

  <maintainer email="zebromek@gmail.com">Tomek Żebrowski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-serial</depend>
  <depend>socketcan_bridge</depend>

  <export>
  </export>
</package>
