<?xml version="1.0"?>
<package format="2">
  <name>sirius_modules</name>
  <version>0.2.0</version>
  <description>Sirius modules software</description>

  <maintainer email="gabrysbrzezinski@gmail.com">Gabriel Brzeziński</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <depend>roscpp</depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>sirius_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
</package>
